# monolith-template

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  database.py  depends.py  exceptions.py  routers.py  shemas.py  unit.py
app/miniapps/example/: models.py  repository.py  router.py  service.py  shemas.py
